[gd_scene load_steps=2 format=3 uid="uid://clyuex0gy8xmc"]

[ext_resource type="Script" uid="uid://dy7fq50ako5dd" path="res://Scenes/MainMenu/Main_Menu.gd" id="1_cdkru"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cdkru")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -119.5
offset_right = 184.0
offset_bottom = 119.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Alusta Mängu"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Seaded"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Lõpeta mäng"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -197.5
offset_top = 68.0
offset_right = 197.5
offset_bottom = 159.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 66
text = "Game Name"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
